CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(PhysXSDK C CXX)

SET(PHYSX_ROOT_DIR ${PROJECT_SOURCE_DIR}/physx CACHE INTERNAL "Adds a path to PhysX" FORCE)
SET(PXSHARED_PATH ${PHYSX_ROOT_DIR}/../pxshared CACHE INTERNAL "Adds a path to PhysX" FORCE)

SET(CMAKEMODULES_PATH ${PHYSX_ROOT_DIR}/../externals/cmakemodules CACHE INTERNAL "Adds a path to PhysX" FORCE)
SET(CMAKEMODULES_NAME "CMakeModules" CACHE INTERNAL "CMakeModules name")
SET(CMAKEMODULES_VERSION "1.27" CACHE INTERNAL "CMakeModules version from generation batch")

IF(WIN32)
	SET(TARGET_BUILD_PLATFORM Windows)
ENDIF()

SET(PX_OUTPUT_BIN_DIR ${OCTOON_LIBRARY_OUTPUT_PATH} CACHE INTERNAL "Adds a path to PhysX" FORCE)
SET(PX_OUTPUT_LIB_DIR ${OCTOON_LIBRARY_OUTPUT_PATH} CACHE INTERNAL "Adds a path to PhysX" FORCE)

#SET(PUBLIC_RELEASE 1)
SET(CMAKE_MODULE_PATH ${CMAKEMODULES_PATH})
SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)

ADD_SUBDIRECTORY(${PHYSX_ROOT_DIR}/source/compiler/cmake ${CMAKE_CURRENT_BINARY_DIR}/sdk_source_bin)
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/NvCloth)

MARK_AS_ADVANCED(NV_APPEND_CONFIG_NAME)
MARK_AS_ADVANCED(NV_FORCE_32BIT_SUFFIX)
MARK_AS_ADVANCED(NV_FORCE_64BIT_SUFFIX)
MARK_AS_ADVANCED(NV_USE_DEBUG_WINCRT)
MARK_AS_ADVANCED(NV_USE_GAMEWORKS_OUTPUT_DIRS)
MARK_AS_ADVANCED(NV_USE_STATIC_WINCRT)

MARK_AS_ADVANCED(PX_COPY_EXTERNAL_DLL)
MARK_AS_ADVANCED(PX_EXPORT_LOWLEVEL_PDB)
MARK_AS_ADVANCED(PX_FLOAT_POINT_PRECISE_MATH)
MARK_AS_ADVANCED(PX_GENERATE_GPU_PROJECTS)
MARK_AS_ADVANCED(PX_GENERATE_GPU_PROJECTS_ONLY)
MARK_AS_ADVANCED(PX_GENERATE_GPU_STATIC_LIBRARIES)
MARK_AS_ADVANCED(PX_GENERATE_STATIC_LIBRARIES)
MARK_AS_ADVANCED(PX_SCALAR_MATH)
MARK_AS_ADVANCED(PX_USE_NVTX)

SET_TARGET_ATTRIBUTE(PhysX "contrib/PhysX SDK")
SET_TARGET_ATTRIBUTE(PhysXCharacterKinematic "contrib/PhysX SDK")
SET_TARGET_ATTRIBUTE(PhysXCommon "contrib/PhysX SDK")
SET_TARGET_ATTRIBUTE(PhysXCooking "contrib/PhysX SDK")
SET_TARGET_ATTRIBUTE(PhysXExtensions "contrib/PhysX SDK")
SET_TARGET_ATTRIBUTE(PhysXVehicle "contrib/PhysX SDK")
SET_TARGET_ATTRIBUTE(PhysXPvdSDK "contrib/PhysX SDK")
SET_TARGET_ATTRIBUTE(PhysXTask "contrib/PhysX SDK")
SET_TARGET_ATTRIBUTE(PhysXFoundation "contrib/PhysX SDK")
SET_TARGET_ATTRIBUTE(LowLevel "contrib/PhysX SDK")
SET_TARGET_ATTRIBUTE(LowLevelAABB "contrib/PhysX SDK")
SET_TARGET_ATTRIBUTE(LowLevelDynamics "contrib/PhysX SDK")
SET_TARGET_ATTRIBUTE(SceneQuery "contrib/PhysX SDK")
SET_TARGET_ATTRIBUTE(SimulationController "contrib/PhysX SDK")
SET_TARGET_ATTRIBUTE(FastXml "contrib/PhysX SDK")
SET_TARGET_ATTRIBUTE(NvCloth "contrib/PhysX SDK")