PROJECT(glew C)
SET(GLEW_NAME "glew")

SET(HEADER_LIST
    include/GL/glew.h
    include/GL/glxew.h
    include/GL/wglew.h
)

SET(SOURCE_LIST
    src/glew.c
)

SOURCE_GROUP(${GLEW_NAME} FILES ${HEADER_LIST})
SOURCE_GROUP(${GLEW_NAME} FILES ${SOURCE_LIST})

IF(OCTOON_BUILD_OPENGL_ES2 OR OCTOON_BUILD_OPENGL_ES3)
    ADD_DEFINITIONS(-DGLEW_BUILD)
    ADD_LIBRARY(${GLEW_NAME} SHARED ${HEADER_LIST} ${SOURCE_LIST})
ELSE()
    ADD_DEFINITIONS(-DGLEW_STATIC)
    ADD_LIBRARY(${GLEW_NAME} STATIC ${HEADER_LIST} ${SOURCE_LIST})
ENDIF()

TARGET_INCLUDE_DIRECTORIES(${GLEW_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/include)

IF(OCTOON_BUILD_PLATFORM_APPLE)
    FIND_LIBRARY(AGL_FRAMEWORK AGL)
    FIND_LIBRARY(OPENGL_FRAMEWORK OpenGL)
    TARGET_LINK_LIBRARIES(${GLEW_NAME} PRIVATE ${AGL_FRAMEWORK})
    TARGET_LINK_LIBRARIES(${GLEW_NAME} PRIVATE ${OPENGL_FRAMEWORK})
ELSEIF(OCTOON_BUILD_PLATFORM_WINDOWS)
    TARGET_LINK_LIBRARIES(${GLEW_NAME} PRIVATE opengl32)
ENDIF()