project(json C)

SET(LIB_NAME json)

INCLUDE_DIRECTORIES(${DEPENDENCIES_PATH}/zlib)

FILE(GLOB_RECURSE HEADER_LIST *.h)
AUX_SOURCE_DIRECTORY(. SOURCE_LIST)

SOURCE_GROUP("json" FILES ${HEADER_LIST})
SOURCE_GROUP("json" FILES ${SOURCE_LIST})

# ADD_DEFINITIONS(-DJSON_DLL_BUILD)
ADD_LIBRARY(${LIB_NAME} ${HEADER_LIST} ${SOURCE_LIST})

IF(MINGW OR UNIX)
   SET_TARGET_PROPERTIES(json PROPERTIES OUTPUT_NAME json)
ENDIF()