PROJECT(libpng C)

SET(LIB_NAME libpng)

INCLUDE_DIRECTORIES(${OCTOON_PATH_DEPENDENCIES}/zlib)

FILE(GLOB_RECURSE HEADER_LIST *.h)
FILE(GLOB_RECURSE SOURCE_LIST *.c)

SOURCE_GROUP("libpng" FILES ${HEADER_LIST})
SOURCE_GROUP("libpng" FILES ${SOURCE_LIST})

IF(OCTOON_BUILD_SHARED_DLL)
    ADD_LIBRARY(${LIB_NAME} SHARED ${HEADER_LIST} ${SOURCE_LIST})
ELSE()
	IF(OCTOON_BUILD_PLATFORM_WINDOWS)
    	ADD_DEFINITIONS(-DPNG_BUILD_DLL)
	ENDIF()
    ADD_LIBRARY(${LIB_NAME} ${HEADER_LIST} ${SOURCE_LIST})
ENDIF()

TARGET_LINK_LIBRARIES(${LIB_NAME} zlib)

IF(OCTOON_BUILD_PLATFORM_ANDROID)
    TARGET_LINK_LIBRARIES (${LIB_NAME} m)
ENDIF()

IF(MINGW OR UNIX)
   SET_TARGET_PROPERTIES(libpng PROPERTIES OUTPUT_NAME png)
ENDIF()