PROJECT(unzip)

SET(LIB_NAME unzip)

INCLUDE_DIRECTORIES(${OCTOON_PATH_DEPENDENCIES}/zlib)

FILE(GLOB_RECURSE HEADER_LIST *.h*)
AUX_SOURCE_DIRECTORY(. SOURCE_LIST)

SOURCE_GROUP("unzip" FILES ${HEADER_LIST})
SOURCE_GROUP("unzip" FILES ${SOURCE_LIST})

ADD_DEFINITIONS(-DZLIB_DLL)
ADD_DEFINITIONS(-DZLIB_INTERNAL)
ADD_LIBRARY(${LIB_NAME} STATIC ${HEADER_LIST} ${SOURCE_LIST})

TARGET_LINK_LIBRARIES (${LIB_NAME} zlib)