PROJECT(zipper)

SET(LIB_NAME zipper)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/zipper)
INCLUDE_DIRECTORIES(${OCTOON_PATH_DEPENDENCIES}/zlib)
INCLUDE_DIRECTORIES(${OCTOON_PATH_DEPENDENCIES}/unzip)

FILE(GLOB ZIPPER_SOURCES
  ${CMAKE_CURRENT_SOURCE_DIR}/zipper/*.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/zipper/*.h
)
SOURCE_GROUP(zipper FILES ${ZIPPER_SOURCES})

ADD_LIBRARY(${LIB_NAME} STATIC ${ZIPPER_SOURCES})

TARGET_LINK_LIBRARIES (${LIB_NAME} PUBLIC zlib)
TARGET_LINK_LIBRARIES (${LIB_NAME} PUBLIC unzip)