SET(LIB_NAME cube)
SET(LIB_OUTNAME octoon-${LIB_NAME})

SET(HEADER_PATH ${OCTOON_PATH_HEADER})
SET(SOURCE_PATH ${OCTOON_PATH_SAMPLES}/${LIB_NAME})

SET(PLATFORM_LIST
    ${SOURCE_PATH}/main.cpp
)
SOURCE_GROUP(${LIB_NAME} FILES ${PLATFORM_LIST})

IF(NOT OCTOON_BUILD_SHARED_DLL AND OCTOON_BUILD_PLATFORM_WINDOWS)
	ADD_DEFINITIONS(-DOCTOON_STATIC)
ENDIF()

ADD_EXECUTABLE(${LIB_OUTNAME} ${PLATFORM_LIST})

TARGET_LINK_LIBRARIES(${LIB_OUTNAME} PRIVATE octoon)
TARGET_LINK_LIBRARIES(${LIB_OUTNAME} PRIVATE octoon-c)

IF(OCTOON_BUILD_PLATFORM_EMSCRIPTEN)
    #set(CMAKE_CXX_FLAGS "-o cube.html ${CMAKE_CXX_FLAGS}")
    #set(CMAKE_CXX_FLAGS "-s USE_WEBGL2=1 ${CMAKE_CXX_FLAGS}")
    #set(CMAKE_CXX_FLAGS "-s FULL_ES2=1 ${CMAKE_CXX_FLAGS}")
    #set(CMAKE_CXX_FLAGS "-s FULL_ES3=1 ${CMAKE_CXX_FLAGS}")
    SET_TARGET_PROPERTIES(${LIB_OUTNAME} PROPERTIES LINK_FLAGS "-o cube.html -s USE_WEBGL2=1 -s FULL_ES2=1 -s FULL_ES3=1")
    #MESSAGE(WARNING "c++ compiler is" ${CMAKE_CXX_COMPILER})
ENDIF()

SET_TARGET_ATTRIBUTE(${LIB_OUTNAME} "samples")