SET(LIB_NAME cube)
SET(LIB_OUTNAME octoon-${LIB_NAME})

SET(HEADER_PATH ${OCTOON_PATH_HEADER})
SET(SOURCE_PATH ${OCTOON_PATH_SAMPLES}/${LIB_NAME})

SET(PLATFORM_LIST
    ${SOURCE_PATH}/main.cpp
)
SOURCE_GROUP(${LIB_NAME} FILES ${PLATFORM_LIST})

IF(NOT OCTOON_BUILD_SHARED_DLL AND OCTOON_BUILD_PLATFORM_WINDOWS)
	ADD_DEFINITIONS(-DOCTOON_STATIC)
ENDIF()

ADD_EXECUTABLE(${LIB_OUTNAME} ${PLATFORM_LIST})

TARGET_LINK_LIBRARIES(${LIB_OUTNAME} PRIVATE octoon)
TARGET_LINK_LIBRARIES(${LIB_OUTNAME} PRIVATE octoon-c)

IF(OCTOON_BUILD_PLATFORM_EMSCRIPTEN)
    #SET_TARGET_PROPERTIES(${LIB_OUTNAME} PROPERTIES COMPILE_FLAGS "-o cube.html -s FULL_ES2=1 -s FULL_ES3=1")
    SET(emscripten_js_path "${LIB_OUTNAME}.js")
    SET(runner_in ${OCTOON_PATH_BIN}/system/web/runner.html.in)
    SET(runner ${OCTOON_LIBRARY_OUTPUT_PATH}/${LIB_OUTNAME}_runner.html)
	
    CONFIGURE_FILE(${runner_in} ${runner} @ONLY)
    
    file(COPY ${OCTOON_LIBRARY_OUTPUT_PATH}/${LIB_OUTNAME}_runner.html
        DESTINATION ${OCTOON_LIBRARY_OUTPUT_PATH_DEBUG})
ENDIF()

SET_TARGET_ATTRIBUTE(${LIB_OUTNAME} "samples")