SET(LIB_NAME offscreen)
SET(LIB_OUTNAME octoon-${LIB_NAME})

SET(HEADER_PATH ${OCTOON_PATH_SAMPLES}/${LIB_NAME})
SET(SOURCE_PATH ${OCTOON_PATH_SAMPLES}/${LIB_NAME})

SET(PLATFORM_LIST
    ${SOURCE_PATH}/main.cpp
	${HEADER_PATH}/path_meshing_component.h
	${SOURCE_PATH}/path_meshing_component.cpp
)
SOURCE_GROUP(${LIB_NAME} FILES ${PLATFORM_LIST})

ADD_EXECUTABLE(${LIB_OUTNAME} ${PLATFORM_LIST})

TARGET_LINK_LIBRARIES(${LIB_OUTNAME} PRIVATE octoon)
TARGET_LINK_LIBRARIES(${LIB_OUTNAME} PRIVATE octoon-c)

SET_TARGET_ATTRIBUTE(${LIB_OUTNAME} "samples")