SET(LIB_NAME painter)
SET(LIB_OUTNAME octoon-${LIB_NAME})

SET(HEADER_PATH ${OCTOON_PATH_HEADER})
SET(SOURCE_PATH ${OCTOON_PATH_SAMPLES}/${LIB_NAME})

SET(PLATFORM_LIST
    ${SOURCE_PATH}/main.cpp
)
SOURCE_GROUP(${LIB_NAME} FILES ${PLATFORM_LIST})

ADD_DEFINITIONS(-DOCTOON_STATIC)
ADD_EXECUTABLE(${LIB_OUTNAME} ${PLATFORM_LIST})

TARGET_LINK_LIBRARIES(${LIB_OUTNAME} PRIVATE octoon)
TARGET_LINK_LIBRARIES(${LIB_OUTNAME} PRIVATE octoon-c)

SET_TARGET_ATTRIBUTE(${LIB_OUTNAME} "samples")